implementacion de mejoras en los logs, reduccion de imports en los archivos modificados